@@ -3,8 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.microbean</groupId>
-  <artifactId>microbean-settings</artifactId>
-  <version>0.0.5-SNAPSHOT</version>
+  <artifactId>microbean-settings-parent</artifactId>
+  <version>0.1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <parent>
     <groupId>org.microbean</groupId>
@@ -13,8 +14,8 @@
     <relativePath />
   </parent>
 
-  <name>microBean™ Settings</name>
-  <description>${project.name}</description>
+  <name>microBean™ Settings: Parent</name>
+  <description>Settings for Java.</description>
   <inceptionYear>2019</inceptionYear>
   <url>https://microbean.github.io/${project.artifactId}</url>
 
@@ -25,111 +26,51 @@
     <tag>HEAD</tag>
   </scm>
 
+  <modules>
+    <module>microbean-settings-api</module>
+  </modules>
+  
   <dependencyManagement>
     <dependencies>
 
-
       <!-- Imports. -->
-
 
       <dependency>
         <groupId>org.jboss.weld</groupId>
         <artifactId>weld-core-bom</artifactId>
-        <version>3.1.3.Final</version>
+        <version>4.0.1.Final</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
 
-
       <!-- Normal dependencies. -->
 
-
-      <dependency>
-        <groupId>jakarta.annotation</groupId>
-        <artifactId>jakarta.annotation-api</artifactId>
-        <version>1.3.5</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>jakarta.el</groupId>
-        <artifactId>jakarta.el-api</artifactId>
-        <version>3.0.3</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>jakarta.enterprise</groupId>
-        <artifactId>jakarta.enterprise.cdi-api</artifactId>
-        <version>2.0.2</version>
-        <type>jar</type>
-        <exclusions>
-          <exclusion>
-            <groupId>jakarta.ejb</groupId>
-            <artifactId>jakarta.ejb-api</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-
-      <dependency>
-        <groupId>jakarta.inject</groupId>
-        <artifactId>jakarta.inject-api</artifactId>
-        <version>1.0</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>jakarta.interceptor</groupId>
-        <artifactId>jakarta.interceptor-api</artifactId>
-        <version>1.2.5</version>
-        <type>jar</type>
-        <exclusions>
-          <exclusion>
-            <groupId>jakarta.ejb</groupId>
-            <artifactId>jakarta.ejb-api</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-
-      <dependency>
-        <groupId>org.glassfish</groupId>
-        <artifactId>jakarta.el</artifactId>
-        <type>jar</type>
-        <version>3.0.3</version>
-      </dependency>
-
+      <!-- See also org.jboss.jandex:jandex-maven-plugin below -->
       <dependency>
         <groupId>org.jboss</groupId>
         <artifactId>jandex</artifactId>
-        <version>2.1.2.Final</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jboss.logging</groupId>
-        <artifactId>jboss-logging</artifactId>
-        <version>3.4.1.Final</version>
+        <version>2.4.0.Final</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>5.6.0</version>
+        <version>5.7.2</version>
         <type>jar</type>
       </dependency>
-      
+
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.6.0</version>
+        <version>5.7.2</version>
         <type>jar</type>
       </dependency>
-      
+
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-development-annotations</artifactId>
-        <version>0.2.4</version>
+        <version>0.2.11</version>
         <type>jar</type>
       </dependency>
 
@@ -137,144 +78,138 @@
     </dependencies>
   </dependencyManagement>
 
-  <dependencies>
-
-
-    <!-- Test-scoped dependencies. -->
-
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.glassfish</groupId>
-      <artifactId>jakarta.el</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jboss.weld.se</groupId>
-      <artifactId>weld-se-core</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.jboss.spec.javax.el</groupId>
-          <artifactId>jboss-el-api_3.0_spec</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.jboss.weld.probe</groupId>
-          <artifactId>weld-probe-core</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-
-
-    <!-- Runtime-scoped dependencies. -->
-
-
-    <dependency>
-      <groupId>org.jboss</groupId>
-      <artifactId>jandex</artifactId>
-      <type>jar</type>
-      <scope>runtime</scope>
-      <optional>true</optional>
-    </dependency>
-
-
-    <!-- Provided-scoped dependencies. -->
-
-
-    <dependency>
-      <groupId>jakarta.annotation</groupId>
-      <artifactId>jakarta.annotation-api</artifactId>
-      <type>jar</type>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>jakarta.el</groupId>
-      <artifactId>jakarta.el-api</artifactId>
-      <type>jar</type>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>jakarta.enterprise</groupId>
-      <artifactId>jakarta.enterprise.cdi-api</artifactId>
-      <type>jar</type>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>jakarta.inject</groupId>
-      <artifactId>jakarta.inject-api</artifactId>
-      <type>jar</type>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>jakarta.interceptor</groupId>
-      <artifactId>jakarta.interceptor-api</artifactId>
-      <type>jar</type>
-      <scope>provided</scope>
-    </dependency>
-
-
-    <!-- Compile-scoped dependencies. -->
-
-
-    <dependency>
-        <groupId>org.microbean</groupId>
-        <artifactId>microbean-development-annotations</artifactId>
-        <type>jar</type>
-        <scope>compile</scope>
-    </dependency>
-
-
-  </dependencies>
-
   <build>
-
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <compilerArgs>
+              <arg>--enable-preview</arg>
+              <arg>-Xlint:all</arg>
+              <arg>-Xlint:-preview</arg>
+              <arg>-Xpkginfo:always</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <configuration>
+            <additionalOptions>
+              <additionalOption>--enable-preview</additionalOption>
+            </additionalOptions>
+            <docfilessubdirs>true</docfilessubdirs>
+            <taglet>guru.nidi.graphviz.GraphvizTaglet</taglet>
+            <tagletArtifact>
+              <groupId>guru.nidi</groupId>
+              <artifactId>graphviz-taglet9</artifactId>
+              <version>0.18.0</version>
+            </tagletArtifact>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M5</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+            <systemPropertyVariables>
+              <project.build.directory>${project.build.directory}</project.build.directory>
+              <project.build.outputDirectory>${project.build.outputDirectory}</project.build.outputDirectory>
+              <project.build.testDirectory>${project.build.testDirectory}</project.build.testDirectory>
+              <project.build.testOutputDirectory>${project.build.testOutputDirectory}</project.build.testOutputDirectory>
+            </systemPropertyVariables>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.jboss.jandex</groupId>
+          <artifactId>jandex-maven-plugin</artifactId>
+          <version>1.2.0</version>
+          <configuration>
+            <indexName>${jandex.indexName}</indexName>
+            <processDefaultFileSet>false</processDefaultFileSet>
+            <verbose>${jandex.verbose}</verbose>
+          </configuration>
+          <dependencies>
+            <!-- See also org.jboss:jandex above. -->
+            <dependency>
+              <groupId>org.jboss</groupId>
+              <artifactId>jandex</artifactId>
+              <version>2.4.0.Final</version>
+            </dependency>
+          </dependencies>
+          <executions>
+            <execution>
+              <id>Create Jandex index</id>
+              <phase>process-classes</phase>
+              <configuration>
+                <fileSets>
+                  <fileSet>
+                    <directory>${project.build.outputDirectory}</directory>
+                  </fileSet>
+                </fileSets>
+              </configuration>
+            </execution>
+            <execution>
+              <id>Create Jandex index for test classes</id>
+              <phase>process-test-classes</phase>
+              <configuration>
+                <fileSets>
+                  <fileSet>
+                    <directory>${project.build.testOutputDirectory}</directory>
+                  </fileSet>
+                </fileSets>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
-
       <plugin>
         <groupId>com.github.github</groupId>
         <artifactId>site-maven-plugin</artifactId>
       </plugin>
-
       <plugin>
         <groupId>org.jboss.jandex</groupId>
         <artifactId>jandex-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>make-index</id>
+            <id>Create Jandex index</id>
+            <goals>
+              <goal>jandex</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>Create Jandex index for test classes</id>
             <goals>
               <goal>jandex</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
 
   <properties>
 
+    <jandex.indexName>jandex.idx</jandex.indexName>
+    <jandex.verbose>true</jandex.verbose>
+
+    <jdkToolchainVendor>openjdk</jdkToolchainVendor>
+
+    <!-- maven-compiler-plugin properties -->
+    <maven.compiler.release>17</maven.compiler.release>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+
     <!-- maven-javadoc-plugin properties -->
-    <links>https://jakarta.ee/specifications/cdi/2.0/apidocs/,https://jakarta.ee/specifications/dependency-injection/1.0/apidocs/,https://jakarta.ee/specifications/expression-language/3.0/apidocs/,https://microbean.github.io/microbean-development-annotations/apidocs/</links>
+    <links></links>
 
   </properties>
 
